--- a/style.css
+++ b/style.css
@@ -1,45 +1,73 @@
-.jumbotron{
+.jumbotron {
     text-align: center;
     background: none;
-    
+
 }
-.sectionLight{
- background-color:  #eceeef;
+
+.sectionLight {
+    background-color: #eceeef;
     padding: 2rem;
 }
 
-.sectionDark{
+.sectionDark {
     background-color: #cccccc;
     padding: 2rem;
 }
-.wrapperbtn{
-    
-      line-height: 20px;
+
+.wrapperbtn {
+
+    line-height: 20px;
     display: block;
     margin: auto;
 }
-button.btn-lg.coolstuffbtn{
+
+button.btn-lg.coolstuffbtn {
     background-color: red;
     color: #fff;
     display: block;
     margin: auto;
-  
+
 }
-h5.modal-title{
-    margin-left:  auto;
-    
-}
-.ModelFormWrapper{
-    padding: 2rem;
-}
-.container-fluid{
-    padding: 0;
-}
-.imgcenter{
+.socialWrapper{
     display: block;
     margin: auto;
 }
-.btnCenter{
+.fa{
+    margin: 10px;
+
+}
+.fa-instagram{
+    color: #fff;
+}
+.fa-google-plus-square{
+    color:#c32f10;
+}
+.fa-facebook-square {
+    color:#3b5998;
+}
+.footerimg{
+    padding: 15px;
+}
+
+h5.modal-title {
+    margin-left: auto;
+
+}
+
+.ModelFormWrapper {
+    padding: 2rem;
+}
+
+.container-fluid {
+    padding: 0;
+}
+
+.imgcenter {
+    display: block;
+    margin: auto;
+}
+
+.btnCenter {
     display: block;
     margin: auto;
     margin-top: 15px;
